# markcat

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: main.rs
tests/: cli.rs
