[package]
name = "markcat"
version = "1.1.2"
edition = "2021"
authors = ["Ted Pinkerton"]
license = "MIT"
description = "Convert a project directory to markdown"
homepage = "https://github.com/RunnersNum40/markcat"
repository = "https://github.com/RunnersNum40/markcat"
readme = "README.md"
keywords = ["markdown", "cli"]
categories = ["command-line-utilities"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
ignore = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
tempfile = "3.20"
